--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "babel-register": "^6.18.0",
     "bootstrap": "^3.3.6",
     "core-js": "^2.4.1",
+    "gulp": "^3.9.1",
     "gulp-clean": "^0.3.2",
+    "gulp-typescript": "^3.1.4",
     "koa": "^1.2.4",
     "koa-body": "^1.6.0",
     "koa-router": "^5.4.0",
@@ -33,7 +35,6 @@
     "koa-static": "^2.0.0",
     "koa-swig": "^2.2.0",
     "lodash": "^4.17.3",
-    "ng2-bootstrap": "^1.1.14",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.12",
     "systemjs": "0.19.27",
@@ -51,6 +52,7 @@
     "lite-server": "^2.2.2",
     "typescript": "^2.0.2",
     "typings": "^1.3.2",
-    "webpack": "^2.1.0-beta.25"
+    "webpack": "^2.1.0-beta.25",
+    "webpack-dev-server": "^1.16.2"
   }
 }
