--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "files.exclude": {
-        "**/*.js": { "when": "$(basename).ts"},
-        "**/*.js.map": true
+   //     "**/*.js": { "when": "$(basename).ts"},
+    //    "**/*.js.map": true
      }     
 }
