--- a/package.json
+++ b/package.json
@@ -41,15 +41,21 @@
     "zone.js": "^0.6.23"
   },
   "devDependencies": {
+    "awesome-typescript-loader": "^3.0.0-beta.18",
     "babel-cli": "^6.18.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-stage-0": "^6.16.0",
     "concurrently": "^2.2.0",
+    "css-loader": "^0.26.1",
     "debug": "^2.2.0",
     "gulp": "^3.9.1",
     "gulp-sourcemaps": "^2.2.0",
     "gulp-typescript": "^3.0.2",
+    "html": "^1.0.0",
     "lite-server": "^2.2.2",
+    "raw": "^0.1.4",
+    "raw-loader": "^0.5.1",
+    "to-string-loader": "^1.1.5",
     "typescript": "^2.0.2",
     "typings": "^1.3.2",
     "webpack": "^2.1.0-beta.25",
