--- a/package.json
+++ b/package.json
@@ -36,11 +36,12 @@
     "koa-swig": "^2.2.0",
     "lodash": "^4.17.3",
     "reflect-metadata": "^0.1.3",
-    "rxjs": "5.0.0-beta.12",
+    "rxjs": "^5.0.3",
     "systemjs": "0.19.27",
     "zone.js": "^0.6.23"
   },
   "devDependencies": {
+    "angular2-template-loader": "^0.6.0",
     "awesome-typescript-loader": "^3.0.0-beta.18",
     "babel-cli": "^6.18.0",
     "babel-preset-es2015": "^6.18.0",
@@ -52,13 +53,16 @@
     "gulp-sourcemaps": "^2.2.0",
     "gulp-typescript": "^3.0.2",
     "html": "^1.0.0",
+    "html-loader": "^0.4.4",
+    "html-webpack-plugin": "^2.26.0",
     "lite-server": "^2.2.2",
     "raw": "^0.1.4",
     "raw-loader": "^0.5.1",
+    "style-loader": "^0.13.1",
     "to-string-loader": "^1.1.5",
     "typescript": "^2.0.2",
     "typings": "^1.3.2",
-    "webpack": "^2.1.0-beta.25",
+    "webpack": "^1.14.0",
     "webpack-dev-server": "^1.16.2"
   }
 }
