webpack-dev-server +koa work

--- a/package.json
+++ b/package.json
@@ -1,72 +1,74 @@
 {
-  "name": "angular-quickstart",
-  "version": "1.0.0",
-  "scripts": {
-    "start": "tsc && concurrently \"npm run tsc:w\" \"npm run lite\" ",
-    "lite": "lite-server",
-    "postinstall": "typings install",
-    "tsc": "tsc",
-    "tsc:w": "tsc -w",
-    "typings": "typings",
-    "start-webpack": "webpack-dev-server --hot --inline --config ./webpack/webpack.dev.client.js"
-  },
-  "license": "ISC",
-  "dependencies": {
-    "@angular/common": "2.0.0",
-    "@angular/compiler": "2.0.0",
-    "@angular/core": "2.0.0",
-    "@angular/forms": "2.0.0",
-    "@angular/http": "2.0.0",
-    "@angular/platform-browser": "2.0.0",
-    "@angular/platform-browser-dynamic": "2.0.0",
-    "@angular/router": "3.0.0",
-    "@angular/upgrade": "2.0.0",
-    "babel-core": "^6.21.0",
-    "babel-loader": "^6.2.10",
-    "babel-register": "^6.18.0",
-    "bootstrap": "^3.3.6",
-    "core-js": "^2.4.1",
-    "es6-shim": "^0.35.2",
-    "gulp": "^3.9.1",
-    "gulp-clean": "^0.3.2",
-    "gulp-typescript": "^3.1.4",
-    "koa": "^1.2.4",
-    "koa-body": "^1.6.0",
-    "koa-router": "^5.4.0",
-    "koa-session": "^3.4.0",
-    "koa-static": "^2.0.0",
-    "koa-swig": "^2.2.1",
-    "lodash": "^4.17.3",
-    "reflect-metadata": "^0.1.3",
-    "rxjs": "^5.0.3",
-    "systemjs": "0.19.27",
-    "underscore-contrib": "^0.3.0",
-    "zone.js": "^0.6.23"
-  },
-  "devDependencies": {
-    "angular2-template-loader": "^0.6.0",
-    "awesome-typescript-loader": "^3.0.0-beta.18",
-    "babel-cli": "^6.18.0",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-stage-0": "^6.16.0",
-    "concurrently": "^2.2.0",
-    "css-loader": "^0.26.1",
-    "debug": "^2.2.0",
-    "gulp": "^3.9.1",
-    "gulp-sourcemaps": "^2.2.0",
-    "gulp-typescript": "^3.0.2",
-    "html": "^1.0.0",
-    "html-loader": "^0.4.4",
-    "html-webpack-plugin": "^2.26.0",
-    "lite-server": "^2.2.2",
-    "proxy-middleware": "^0.15.0",
-    "raw-loader": "^0.5.1",
-    "style-loader": "^0.13.1",
-    "to-string-loader": "^1.1.5",
-    "ts-loader": "^1.3.3",
-    "typescript": "^2.0.2",
-    "typings": "^1.3.2",
-    "webpack": "^1.13.1",
-    "webpack-dev-server": "^1.14.1"
-  }
+    "name": "angular-quickstart",
+    "version": "1.0.0",
+    "scripts": {
+        "start": "tsc && concurrently \"npm run tsc:w\" \"npm run lite\" ",
+        "lite": "lite-server",
+        "postinstall": "typings install",
+        "tsc": "tsc",
+        "tsc:w": "tsc -w",
+        "typings": "typings",
+        "start-webpack": "webpack-dev-server --hot --inline --config ./webpack/webpack.dev.client.js",
+        "start-koa": "node server.js"
+    },
+    "license": "ISC",
+    "dependencies": {
+        "@angular/common": "2.0.0",
+        "@angular/compiler": "2.0.0",
+        "@angular/core": "2.0.0",
+        "@angular/forms": "2.0.0",
+        "@angular/http": "2.0.0",
+        "@angular/platform-browser": "2.0.0",
+        "@angular/platform-browser-dynamic": "2.0.0",
+        "@angular/router": "3.0.0",
+        "@angular/upgrade": "2.0.0",
+        "babel-core": "^6.21.0",
+        "babel-loader": "^6.2.10",
+        "babel-register": "^6.18.0",
+        "bootstrap": "^3.3.6",
+        "core-js": "^2.4.1",
+        "es6-shim": "^0.35.2",
+        "gulp": "^3.9.1",
+        "gulp-clean": "^0.3.2",
+        "gulp-typescript": "^3.1.4",
+        "koa": "^1.2.4",
+        "koa-body": "^1.6.0",
+        "koa-pixie-proxy": "^1.0.7",
+        "koa-router": "^5.4.0",
+        "koa-session": "^3.4.0",
+        "koa-static": "^2.0.0",
+        "koa-swig": "^2.2.1",
+        "lodash": "^4.17.3",
+        "reflect-metadata": "^0.1.3",
+        "rxjs": "^5.0.3",
+        "systemjs": "0.19.27",
+        "underscore-contrib": "^0.3.0",
+        "zone.js": "^0.6.23"
+    },
+    "devDependencies": {
+        "angular2-template-loader": "^0.6.0",
+        "awesome-typescript-loader": "^3.0.0-beta.18",
+        "babel-cli": "^6.18.0",
+        "babel-preset-es2015": "^6.18.0",
+        "babel-preset-stage-0": "^6.16.0",
+        "concurrently": "^2.2.0",
+        "css-loader": "^0.26.1",
+        "debug": "^2.2.0",
+        "gulp": "^3.9.1",
+        "gulp-sourcemaps": "^2.2.0",
+        "gulp-typescript": "^3.0.2",
+        "html": "^1.0.0",
+        "html-loader": "^0.4.4",
+        "html-webpack-plugin": "^2.26.0",
+        "lite-server": "^2.2.2",
+        "proxy-middleware": "^0.15.0",
+        "raw-loader": "^0.5.1",
+        "style-loader": "^0.13.1",
+        "to-string-loader": "^1.1.5",
+        "ts-loader": "^1.3.3",
+        "typescript": "^2.0.2",
+        "typings": "^1.3.2",
+        "webpack": "^1.13.1",
+        "webpack-dev-server": "^1.14.1"
+    }
 }
