--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "gulp-typescript": "^3.1.4",
     "koa": "^1.2.4",
     "koa-body": "^1.6.0",
+    "koa-json": "^1.1.3",
     "koa-pixie-proxy": "^1.0.7",
     "koa-router": "^5.4.0",
     "koa-session": "^3.4.0",
