--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "zone.js": "^0.6.23"
   },
   "devDependencies": {
+    "angular-router-loader": "^0.5.0",
     "angular2-template-loader": "^0.6.0",
     "awesome-typescript-loader": "^3.0.0-beta.18",
     "babel-cli": "^6.18.0",
