--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gulp": "^3.9.1",
     "gulp-clean": "^0.3.2",
     "gulp-typescript": "^3.1.4",
+    "ionicons": "^3.0.0",
     "koa": "^1.2.4",
     "koa-body": "^1.6.0",
     "koa-json": "^1.1.3",
@@ -50,6 +51,7 @@
   "devDependencies": {
     "angular-router-loader": "^0.5.0",
     "angular2-template-loader": "^0.6.0",
+    "assets-webpack-plugin": "^3.5.1",
     "awesome-typescript-loader": "^3.0.0-beta.18",
     "babel-cli": "^6.18.0",
     "babel-preset-es2015": "^6.18.0",
@@ -57,6 +59,7 @@
     "concurrently": "^2.2.0",
     "css-loader": "^0.26.1",
     "debug": "^2.2.0",
+    "extract-text-webpack-plugin": "^1.0.1",
     "gulp": "^3.9.1",
     "gulp-sourcemaps": "^2.2.0",
     "gulp-typescript": "^3.0.2",
@@ -66,6 +69,7 @@
     "lite-server": "^2.2.2",
     "proxy-middleware": "^0.15.0",
     "raw-loader": "^0.5.1",
+    "sass-loader": "^6.0.0",
     "style-loader": "^0.13.1",
     "to-string-loader": "^1.1.5",
     "ts-loader": "^1.3.3",
