--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "css-loader": "^0.26.1",
     "debug": "^2.2.0",
     "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.10.0",
     "gulp": "^3.9.1",
     "gulp-sourcemaps": "^2.2.0",
     "gulp-typescript": "^3.0.2",
@@ -75,6 +76,7 @@
     "ts-loader": "^1.3.3",
     "typescript": "^2.0.2",
     "typings": "^1.3.2",
+    "url-loader": "^0.5.7",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
   }
