--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@angular/core": "2.0.0",
     "@angular/forms": "2.0.0",
     "@angular/http": "2.0.0",
-    "@angular/material": "^2.0.0-beta.2",
+    "@angular/material": "^2.0.0-alpha.9",
     "@angular/platform-browser": "2.0.0",
     "@angular/platform-browser-dynamic": "2.0.0",
     "@angular/router": "3.0.0",
@@ -32,6 +32,7 @@
     "gulp": "^3.9.1",
     "gulp-clean": "^0.3.2",
     "gulp-typescript": "^3.1.4",
+    "hammerjs": "^2.0.8",
     "ionicons": "^2.0.1",
     "koa": "^1.2.4",
     "koa-body": "^1.6.0",
@@ -69,9 +70,10 @@
     "html-loader": "^0.4.4",
     "html-webpack-plugin": "^2.26.0",
     "lite-server": "^2.2.2",
+    "node-sass": "^4.0.0",
     "proxy-middleware": "^0.15.0",
     "raw-loader": "^0.5.1",
-    "sass-loader": "^6.0.0",
+    "sass-loader": "^4.1.1",
     "style-loader": "^0.13.1",
     "to-string-loader": "^1.1.5",
     "ts-loader": "^1.3.3",
