--- a/package.json
+++ b/package.json
@@ -13,16 +13,16 @@
   },
   "license": "ISC",
   "dependencies": {
-    "@angular/common": "2.0.0",
-    "@angular/compiler": "2.0.0",
-    "@angular/core": "2.0.0",
-    "@angular/forms": "2.0.0",
-    "@angular/http": "2.0.0",
-    "@angular/material": "^2.0.0-alpha.9",
-    "@angular/platform-browser": "2.0.0",
-    "@angular/platform-browser-dynamic": "2.0.0",
-    "@angular/router": "3.0.0",
-    "@angular/upgrade": "2.0.0",
+    "@angular/common": "^2.3.0",
+    "@angular/compiler": "^2.3.0",
+    "@angular/core": "^2.3.0",
+    "@angular/forms": "^2.3.0",
+    "@angular/http": "^2.3.0",
+    "@angular/material": "^2.0.0-beta.2",
+    "@angular/platform-browser": "^2.3.0",
+    "@angular/platform-browser-dynamic": "^2.3.0",
+    "@angular/router": "^3.3.0",
+    "@angular/upgrade": "2.3.0",
     "babel-core": "^6.21.0",
     "babel-loader": "^6.2.10",
     "babel-register": "^6.18.0",
@@ -44,11 +44,11 @@
     "koa-swig": "^2.2.1",
     "lodash": "^4.17.3",
     "reflect-metadata": "^0.1.3",
-    "rxjs": "^5.0.3",
+    "rxjs": "^5.0.0-rc.4",
     "ssl-root-cas": "^1.2.3",
     "systemjs": "0.19.27",
     "underscore-contrib": "^0.3.0",
-    "zone.js": "^0.6.23"
+    "zone.js": "^0.7.2"
   },
   "devDependencies": {
     "angular-router-loader": "^0.5.0",
