--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.10.0",
     "gulp": "^3.9.1",
+    "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.2.0",
     "gulp-typescript": "^3.0.2",
     "html": "^1.0.0",
