--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "raw-loader": "^0.5.1",
     "resolve-url-loader": "^2.0.2",
     "sass-loader": "^4.1.1",
+    "sass-module-importer": "^1.4.0",
     "style-loader": "^0.13.1",
     "to-string-loader": "^1.1.5",
     "ts-loader": "^1.3.3",
