--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "lodash": "^4.17.3",
     "moment": "^2.18.1",
     "ng2-bootstrap": "^1.4.2",
+    "ngx-uploader": "^2.2.5",
     "reflect-metadata": "^0.1.8",
     "rxjs": "^5.1.1",
     "ssl-root-cas": "^1.2.3",
