--- a/package.json
+++ b/package.json
@@ -1,97 +1,98 @@
 {
-    "name": "angular-quickstart",
-    "version": "1.0.0",
-    "scripts": {
-        "start": "tsc && concurrently \"npm run tsc:w\" \"npm run lite\" ",
-        "lite": "lite-server",
-        "postinstall": "typings install",
-        "tsc": "tsc",
-        "tsc:w": "tsc -w",
-        "typings": "typings",
-        "start-webpack": "webpack-dev-server --hot --inline --config ./webpack/webpack.dev.client.js",
-        "start-koa": "node server.js"
-    },
-    "license": "ISC",
-    "dependencies": {
-        "@angular/common": "^4.0.0",
-        "@angular/compiler": "^4.0.0",
-        "@angular/core": "^4.0.0",
-        "@angular/forms": "^4.0.0",
-        "@angular/http": "^4.0.0",
-        "@angular/material": "^2.0.0-beta.2",
-        "@angular/platform-browser": "^4.0.0",
-        "@angular/platform-browser-dynamic": "^4.0.0",
-        "@angular/router": "^4.0.0",
-        "@angular/upgrade": "4.0.0",
-        "@types/hammerjs": "^2.0.34",
-        "babel-core": "^6.21.0",
-        "babel-loader": "^6.2.10",
-        "babel-register": "^6.18.0",
-        "bootstrap": "^3.3.6",
-        "core-js": "^2.4.1",
-        "es6-shim": "^0.35.2",
-        "gulp": "^3.9.1",
-        "gulp-clean": "^0.3.2",
-        "gulp-typescript": "^3.1.4",
-        "hammerjs": "^2.0.8",
-        "ionicons": "^2.0.1",
-        "jquery": "^3.2.1",
-        "koa": "^1.2.4",
-        "koa-body": "^1.6.0",
-        "koa-json": "^1.1.3",
-        "koa-pixie-proxy": "^1.0.7",
-        "koa-router": "^5.4.0",
-        "koa-session": "^3.4.0",
-        "koa-static": "^2.0.0",
-        "koa-swig": "^2.2.1",
-        "lodash": "^4.17.3",
-        "moment": "^2.18.1",
-        "ng2-bootstrap": "^1.4.2",
-        "ngx-uploader": "^2.2.5",
-        "reflect-metadata": "^0.1.8",
-        "rxjs": "^5.1.1",
-        "ssl-root-cas": "^1.2.3",
-        "systemjs": "0.20.10",
-        "underscore-contrib": "^0.3.0",
-        "zone.js": "^0.7.2"
-    },
-    "devDependencies": {
-        "@types/jquery": "^2.0.41",
-        "angular-router-loader": "^0.5.0",
-        "angular2-template-loader": "^0.6.0",
-        "assets-webpack-plugin": "^3.5.1",
-        "awesome-typescript-loader": "^3.0.0-beta.18",
-        "babel-cli": "^6.18.0",
-        "babel-preset-es2015": "^6.18.0",
-        "babel-preset-stage-0": "^6.16.0",
-        "bootstrap-loader": "^2.0.0",
-        "concurrently": "^2.2.0",
-        "css-loader": "^0.26.1",
-        "debug": "^2.2.0",
-        "extract-text-webpack-plugin": "^2.1.0",
-        "file-loader": "^0.10.0",
-        "gulp": "^3.9.1",
-        "gulp-sass": "^3.1.0",
-        "gulp-sourcemaps": "^2.2.0",
-        "gulp-typescript": "^3.0.2",
-        "html": "^1.0.0",
-        "html-loader": "^0.4.4",
-        "html-webpack-plugin": "^2.26.0",
-        "lite-server": "^2.2.2",
-        "ng-router-loader": "^2.1.0",
-        "node-sass": "^4.0.0",
-        "proxy-middleware": "^0.15.0",
-        "raw-loader": "^0.5.1",
-        "resolve-url-loader": "^2.0.2",
-        "sass-loader": "^4.1.1",
-        "sass-module-importer": "^1.4.0",
-        "style-loader": "^0.13.1",
-        "to-string-loader": "^1.1.5",
-        "ts-loader": "^1.3.3",
-        "typescript": "^2.0.2",
-        "typings": "^1.3.2",
-        "url-loader": "^0.5.7",
-        "webpack": "^2.2.1",
-        "webpack-dev-server": "^2.4.2"
-    }
+  "name": "angular-quickstart",
+  "version": "1.0.0",
+  "scripts": {
+    "start": "tsc && concurrently \"npm run tsc:w\" \"npm run lite\" ",
+    "lite": "lite-server",
+    "postinstall": "typings install",
+    "tsc": "tsc",
+    "tsc:w": "tsc -w",
+    "typings": "typings",
+    "start-webpack": "webpack-dev-server --hot --inline --config ./webpack/webpack.dev.client.js",
+    "start-koa": "node server.js"
+  },
+  "license": "ISC",
+  "dependencies": {
+    "@angular/common": "^4.0.0",
+    "@angular/compiler": "^4.0.0",
+    "@angular/core": "^4.0.0",
+    "@angular/forms": "^4.0.0",
+    "@angular/http": "^4.0.0",
+    "@angular/material": "^2.0.0-beta.2",
+    "@angular/platform-browser": "^4.0.0",
+    "@angular/platform-browser-dynamic": "^4.0.0",
+    "@angular/router": "^4.0.0",
+    "@angular/upgrade": "4.0.0",
+    "@types/hammerjs": "^2.0.34",
+    "babel-core": "^6.21.0",
+    "babel-loader": "^6.2.10",
+    "babel-register": "^6.18.0",
+    "bootstrap": "^3.3.6",
+    "core-js": "^2.4.1",
+    "es6-shim": "^0.35.2",
+    "gulp": "^3.9.1",
+    "gulp-clean": "^0.3.2",
+    "gulp-typescript": "^3.1.4",
+    "hammerjs": "^2.0.8",
+    "ionicons": "^2.0.1",
+    "jquery": "^3.2.1",
+    "koa": "^1.2.4",
+    "koa-body": "^1.6.0",
+    "koa-json": "^1.1.3",
+    "koa-pixie-proxy": "^1.0.7",
+    "koa-router": "^5.4.0",
+    "koa-session": "^3.4.0",
+    "koa-static": "^2.0.0",
+    "koa-swig": "^2.2.1",
+    "lodash": "^4.17.3",
+    "moment": "^2.18.1",
+    "ng2-bootstrap": "^1.4.2",
+    "ng2-smart-table": "^1.0.3",
+    "ngx-uploader": "^2.2.5",
+    "reflect-metadata": "^0.1.8",
+    "rxjs": "^5.1.1",
+    "ssl-root-cas": "^1.2.3",
+    "systemjs": "0.20.10",
+    "underscore-contrib": "^0.3.0",
+    "zone.js": "^0.7.2"
+  },
+  "devDependencies": {
+    "@types/jquery": "^2.0.41",
+    "angular-router-loader": "^0.5.0",
+    "angular2-template-loader": "^0.6.0",
+    "assets-webpack-plugin": "^3.5.1",
+    "awesome-typescript-loader": "^3.0.0-beta.18",
+    "babel-cli": "^6.18.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-stage-0": "^6.16.0",
+    "bootstrap-loader": "^2.0.0",
+    "concurrently": "^2.2.0",
+    "css-loader": "^0.26.1",
+    "debug": "^2.2.0",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^0.10.0",
+    "gulp": "^3.9.1",
+    "gulp-sass": "^3.1.0",
+    "gulp-sourcemaps": "^2.2.0",
+    "gulp-typescript": "^3.0.2",
+    "html": "^1.0.0",
+    "html-loader": "^0.4.4",
+    "html-webpack-plugin": "^2.26.0",
+    "lite-server": "^2.2.2",
+    "ng-router-loader": "^2.1.0",
+    "node-sass": "^4.0.0",
+    "proxy-middleware": "^0.15.0",
+    "raw-loader": "^0.5.1",
+    "resolve-url-loader": "^2.0.2",
+    "sass-loader": "^4.1.1",
+    "sass-module-importer": "^1.4.0",
+    "style-loader": "^0.13.1",
+    "to-string-loader": "^1.1.5",
+    "ts-loader": "^1.3.3",
+    "typescript": "^2.0.2",
+    "typings": "^1.3.2",
+    "url-loader": "^0.5.7",
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "^2.4.2"
+  }
 }
