--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-loader": "^6.2.10",
     "babel-register": "^6.18.0",
     "bootstrap": "^3.3.6",
+    "chartist": "^0.11.0",
     "core-js": "^2.4.1",
     "es6-shim": "^0.35.2",
     "gulp": "^3.9.1",
@@ -46,6 +47,7 @@
     "koa-swig": "^2.2.1",
     "lodash": "^4.17.3",
     "moment": "^2.18.1",
+    "ng-chartist": "^1.1.0",
     "ng2-bootstrap": "^1.4.2",
     "ng2-ckeditor": "^1.1.6",
     "ng2-smart-table": "^1.0.3",
@@ -58,6 +60,7 @@
     "zone.js": "^0.7.2"
   },
   "devDependencies": {
+    "@types/chartist": "^0.9.34",
     "@types/jquery": "^2.0.41",
     "angular-router-loader": "^0.5.0",
     "angular2-template-loader": "^0.6.0",
